sample code added for using fpcalc utility
sample code with erlexec added using fpacalc utility for fingerprints

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,3 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}}]}.
+{shell,[{apps, [erlchroma]},{config,"shell.config"}]}.
