basic ffmpeg wa format conversion done

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}}]}.
+{deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}}
+		
+		]}.
 {shell,[{apps, [erlchroma]},{config,"shell.config"}]}.
