--- a/shell.config
+++ b/shell.config
@@ -2,5 +2,8 @@
 		[
 			{user, "nuku"}, {limit_users, "nuku"}
 		]
+	},
+	{erlchroma,[{temp_folder,"/opt/erlang/chromaprint/data_test/tracks"},{decoded_folder,"/opt/erlang/chromaprint/data_test/track_converted"}]
+	
 	}
 ].
