--- a/shell.config
+++ b/shell.config
@@ -3,7 +3,11 @@
 			{user, "nuku"}, {limit_users, "nuku"}
 		]
 	},
-	{erlchroma,[{temp_folder,"/opt/erlang/chromaprint/data_test/tracks"},{decoded_folder,"/opt/erlang/chromaprint/data_test/track_converted"}]
+	{erlchroma,[
+	{temp_folder,"/opt/erlang/chromaprint/data_test/tracks"},
+	{decoded_folder,"/opt/erlang/chromaprint/data_test/track_converted"},
+	{finpgerprint_folder,"/opt/erlang/chromaprint/data_test/fingerprints"}
+	]
 	
 	}
 ].
