--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}}
-		
+{deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}},
+		{uuid,{git, "https://github.com/okeuday/uuid.git", {tag, "v1.7.2"}}}
 		]}.
 {shell,[{apps, [erlchroma]},{config,"shell.config"}]}.
