--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [{erlexec,{git,"https://github.com/saleyn/erlexec.git",{tag,"1.9"}}},
-		{uuid,{git, "https://github.com/okeuday/uuid.git", {tag, "v1.7.2"}}}
+		{uuid,{git, "https://github.com/okeuday/uuid.git", {tag, "v1.7.2"}}},
+		{jsx,{git, "https://github.com/talentdeficit/jsx.git", {branch, "~> 3.0"}}}
 		]}.
 {shell,[{apps, [erlchroma]},{config,"shell.config"}]}.
